@@ -24,7 +24,13 @@ gct_tool_SOURCES=\
   disablekey.c \
   main.c
 
+if IS_WINDOWS
+  PROVIDED_GWEN_LIB=$(top_builddir)/src/gwenhywfar32_$(GWENHYWFAR_SO_EFFECTIVE).dll
+else
+  PROVIDED_GWEN_LIB=$(top_builddir)/src/libgwenhywfar.la
+endif
+
 gct_tool_LDADD = \
-  $(top_builddir)/src/libgwenhywfar.la \
+  $(PROVIDED_GWEN_LIB) \
   $(PROG_LIBRARIES)
 
